made the 3*3 grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        
+        <div class="displayController">
+            <div class="cells"></div>
+            <div class="cells"></div>
+            <div class="cells"></div>
+            <div class="cells"></div>
+            <div class="cells"></div>
+            <div class="cells"></div>
+            <div class="cells"></div>
+            <div class="cells"></div>
+            <div class="cells"></div>
+        </div>
     </body>
 </html>
