completed the game

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <body>
         <div class="Main">
             <div class="displayController">
-                <div class="cells" data-index="0"></div>
-                <div class="cells" data-index="1"></div>
-                <div class="cells" data-index="2"></div>
-                <div class="cells" data-index="3"></div>
-                <div class="cells" data-index="4"></div>
-                <div class="cells" data-index="5"></div>
-                <div class="cells" data-index="6"></div>
-                <div class="cells" data-index="7"></div>
-                <div class="cells" data-index="8"></div>
+                <div class="cells" id="0"></div>
+                <div class="cells" id="1"></div>
+                <div class="cells" id="2"></div>
+                <div class="cells" id="3"></div>
+                <div class="cells" id="4"></div>
+                <div class="cells" id="5"></div>
+                <div class="cells" id="6"></div>
+                <div class="cells" id="7"></div>
+                <div class="cells" id="8"></div>
             </div>
             <form action="*" method="post">
                 <section class="PlayerOne">
@@ -31,7 +31,7 @@
                     <input type="text" name="PlayerTwo" id="NamePlayerTwo" required>
                     <p>Note: Player One is O</p>
                 </section>
-                <button type="submit">Submit</button>
+                <button type="submit">Start the game</button>
             </form>
         </div>
         <div class="displayResults">
